# llm-from-scratch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: constitution.txt
docs/: BLUEPRINT.md  READING_ORDER.md
scripts/: plot_results.py  profile.py  run_experiments.py
src/llm/: __init__.py  attention.py  cli.py  config.py  data.py  nn.py  scheduler.py  tensor.py  train.py  transformer.py
tests/: conftest.py  test_attention.py  test_autograd.py  test_checkpoint.py  test_data.py  test_e2e.py  test_generation.py  test_gqa.py  test_nn.py  test_optim.py  test_tensor.py  test_tokenizer_edges.py  test_train.py  test_transformer.py
